Update 'backend-tests-go-ktiddrwu' component image to: quay.io/rhtap_qe/backend-tests-go-ktiddrwu:c048bd510880559f020d38d562d454268c0b6382@sha256:70e2e125ec56538328fd64946df270e93f1ada6e2630b3fd54623cf22381dc0a

--- a/components/backend-tests-go-ktiddrwu/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-ktiddrwu/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-ktiddrwu
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.7
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-ktiddrwu:c048bd510880559f020d38d562d454268c0b6382@sha256:70e2e125ec56538328fd64946df270e93f1ada6e2630b3fd54623cf22381dc0a
+          name: container-image
